# MnistGAN

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
mnistLib/: CMakeLists.txt
mnistLib/headers/: NeuralNet.h  ganTrain.h  mnistParser.h  statpack.h  templates.h  variadics.h
mnistLib/src/: NeuralNet.cpp  ganTrain.cpp  mnistParser.cpp  statpack.cpp
tools/: lineplot.py  pcolor.py  plotter.py
